--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#3f51b5">
   <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
 <link rel="stylesheet" href="styles.963e4e761deb775479d3.css"></head>
 <body class="mat-typography">
